Moved to JUnit5, JDK21 and latest maven plugin.